k8s-manifests/overlays/qa/superapp/ecommerce/patch/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-erp
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ecommerce-erp
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/ecommerce-erp-qa
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /var/lib/odoo
            name: cbe-odoo-volume
          - name: odoo-config-volume
            mountPath: /etc/odoo/odoo.conf
            subPath: odoo.conf
      volumes:
        - name: cbe-odoo-volume
          persistentVolumeClaim:
            claimName: cbe-odoo-pvc-qa
        - name: odoo-config-volume
          configMap:
            name: odoo-config
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ecommerce
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/ecommerce-qa
        imagePullPolicy: Always
